--- a/src/components/Sections/MusicQuiz.css
+++ b/src/components/Sections/MusicQuiz.css
@@ -6,8 +6,10 @@
     text-align: center;
     font-size: 1.17rem;
     color: var(--c-dark);
-    background-color: var(--c-secondary);
-    box-shadow: 0px 7px 10px 0px rgba(0, 0, 0, 0.31);
+    background-color: var(--c-background-task);
+    box-shadow: 0px 7px 10px 0px var(--c-dark);
+    -webkit-box-shadow: 0px 7px 10px 0px var(--c-dark);
+    -moz-box-shadow: 0px 7px 10px 0px var(--c-dark);
     margin: 0px 0px 20px;
     padding: 10px 10px 20px;
     
