--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,13 @@
 /* DEFAULT COLORS */
 :root {
   --c-main: #2779a7;
-  /* --c-secondary: #e69138; */
+  --c-shadow-main: rgba(39, 121, 167, 1);
   --c-secondary: #008a66;
   --c-secondary__shadow: #008a657a;
   --c-dark: #333;
   --c-white: #f8f4e9;
   --c-background: #efe2ba;
-  --c-background-task: #f0bc1fb3;
+  --c-background-task: #008a66;
   --c-background-dark: #f7d7b5;
   --c-background-input: rgba(253, 253, 253, 0.685);
 }
